# pyversion-info

./: CHANGELOG.md  LICENSE  README.rst  pyproject.toml  pyversion_info.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: api.rst  changelog.rst  command.rst  conf.py  index.rst
src/: pyversion_info.py
src/pyversion_info/: __init__.py  __main__.py  util.py
test/: conftest.py  test_cmd.py  test_cmd_cpython.py  test_cmd_pypy.py  test_cpython_info.py  test_pypy_info.py  test_pyversion_info.py  test_util.py
test/data/: pyversion-info-data.json
