[metadata]
name = pyversion-info
version = attr:pyversion_info.__version__
description = List released Python versions and their release & EOL dates
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = pyversion-info@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/pyversion-info

keywords =
    history
    python
    python versions

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators

project_urls =
    Source Code = https://github.com/jwodder/pyversion-info
    Bug Tracker = https://github.com/jwodder/pyversion-info/issues

[options]
py_modules = pyversion_info
package_dir =
    =src
python_requires = ~=3.6
install_requires =
    appdirs                 ~= 1.4
    cachecontrol[filecache] ~= 0.12.0
    requests                ~= 2.20
