[metadata]
name = pyversion-info
version = attr:pyversion_info.__version__
description = List released Python versions and their release & EOL dates
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = pyversion-info@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/pyversion-info

keywords =
    history
    python
    python versions

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/pyversion-info
    Bug Tracker = https://github.com/jwodder/pyversion-info/issues

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = ~=3.6
install_requires =
    cachecontrol[filecache] ~= 0.12.0
    click                   >= 8.0
    platformdirs            ~= 2.1
    requests                ~= 2.20

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyversion-info = pyversion_info.__main__:main

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = True
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
